@@ -1,28 +1,25 @@
 [tox]
-envlist = py{36,37,38}
+envlist = py{36,37,38},coverage
 distshare = {toxinidir}/dist
 
 [testenv]
 wheel = true
+allowlist_externals =
+    mv
 deps =
     h5py
     lmfit
     matplotlib
     numpy
-    setuptools
     scipy
     pytest
     pytest-cov
-commands = pytest --cov
+commands =
+    pytest --cov --junitxml=.tox/junit.{envname}.xml --cov-report=xml:.tox/coverage.xml
+    mv .coverage .tox/.coverage.{envname}
 
 [testenv:coverage]
-platform = linux
-allowlist_externals =
-    mv
-    sh
-commands_post =
-    mv .coverage .coverage.main
-    sh -c 'mv examples/.coverage* .'
-    coverage combine
-    coverage report
-    coverage xml
+commands =
+    coverage combine .tox/
+    coverage xml -i -o .tox/coverage.xml
+    mv .coverage .tox/
